[FIXED] fixed format issue for version command